<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <EditText
        android:id="@+id/so1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ban_nh_p_so_1"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/so2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/b_n_h_y_nh_p_s_2"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvketqua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview1" />

    <Button
        android:id="@+id/btncong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_ng" />

    <Button
        android:id="@+id/btntru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Trừ" />

    <Button
        android:id="@+id/btnNhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nhân" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />
</LinearLayout>